manifests/overlays/dev/deployment-patch.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: k8s-spring-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-spring-project
  template:
    metadata:
      labels:
        app: k8s-spring-project
        backstage.io/kubernetes-id: K8sSpringProject
    spec:
      containers:
        - name: k8s-spring-project
          image: ktdsidpdemo.azurecr.io/k8s-spring-project-dev
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "250m"
      imagePullSecrets:
        - name: acr-credentials
