manifests/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-spring-project-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: /
        backend:
          service:
            name: k8s-spring-project-svc
            port:
              number: 80
        pathType: Prefix
